# ai-knowledge-copilot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/services/: embeddings.py  rag_pipeline.py  retrieval.py
data/: chunking.py
scripts/: ingest_documents.py
tests/: test_embeddings.py  test_rag_pipeline.py  test_rag_real_docs.py  test_retrieval.py  test_retrieval_pipeline.py
